# facemo

./: .gitignore  __main__.py  pyproject.toml  reduce_pics.py  requirements.txt
code/: facemo-script.py
source/: script.py
src/: __init__.py  reduce_pics.py  script.py
