[tool.poetry]
name = "facemo"
version = "0.1.0"
description = "Creacion de mosaicos con fotos personalizadas"
authors = ["phzamora <p.hzamora@icloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
notebook = "^7.1.3"
ipykernel = "^6.29.4"
pillow = "^10.3.0"
matplotlib = "^3.8.4"
bs4 = "^0.0.2"
black = "^24.4.0"
ruff = "^0.4.0"
pytest = "^8.1.1"
pre-commit = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Same as Black.
line-length = 120
